--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "tinder",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://Lindow-N.github.io/Copie-tinder",
+  "homepage": "https://Lindow-N.github.io/tinder",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
